--- a/index.html
+++ b/index.html
@@ -1,10 +1,108 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
 <head>
-  <title>Glam Closet</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Glam Closet</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #fff5f8;
+    color: #333;
+    text-align: center;
+}
+
+header {
+    background: white;
+    padding: 30px 20px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+}
+
+h1 {
+    margin: 0;
+    font-size: 36px;
+    color: #e91e63;
+}
+
+.tagline {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #777;
+}
+
+.hero {
+    padding: 60px 20px;
+}
+
+.hero h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+
+.hero p {
+    max-width: 500px;
+    margin: auto;
+    color: #555;
+}
+
+.button {
+    display: inline-block;
+    margin-top: 25px;
+    padding: 12px 25px;
+    background: #e91e63;
+    color: white;
+    text-decoration: none;
+    border-radius: 30px;
+    transition: 0.3s;
+}
+
+.button:hover {
+    background: #d81b60;
+}
+
+.image-placeholder {
+    margin-top: 40px;
+    height: 250px;
+    background: #ffe4ec;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #999;
+    font-size: 14px;
+}
+
+footer {
+    margin-top: 60px;
+    padding: 20px;
+    font-size: 14px;
+    color: #888;
+}
+</style>
 </head>
+
 <body>
-  <h1>Welcome to Glam Closet 💖</h1>
-  <p>เช่าชุดไปคาเฟ่ แบบดูแพงขึ้นอีกระดับ</p>
+
+<header>
+    <h1>Glam Closet 💗</h1>
+    <div class="tagline">แฟชั่นเรียบหรู สไตล์มินิมอล</div>
+</header>
+
+<section class="hero">
+    <h2>เสื้อผ้าคัดพิเศษ ใส่แล้วดูแพง</h2>
+    <p>คอลเลกชันที่ออกแบบมาเพื่อผู้หญิงที่รักความเรียบง่าย แต่โดดเด่นทุกมุมมอง</p>
+    <a href="#" class="button">Shop Now</a>
+
+    <div class="image-placeholder">
+        พื้นที่สำหรับใส่รูปสินค้า (เดี๋ยวเปลี่ยนตอนดึก 😉)
+    </div>
+</section>
+
+<footer>
+    © 2026 Glam Closet. All rights reserved.
+</footer>
+
 </body>
 </html>
