--- a/index.html
+++ b/index.html
@@ -3,81 +3,67 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Glam Closet</title>
+<title>Pebbles Glam Closet</title>
+
+<!-- ฟอนต์ทางการ หรู -->
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 body {
     margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background-color: #fff5f8;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #fffafb;
     color: #333;
-    text-align: center;
 }
 
 header {
-    background: white;
-    padding: 30px 20px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-}
-
-h1 {
-    margin: 0;
-    font-size: 36px;
-    color: #e91e63;
-}
-
-.tagline {
-    margin-top: 10px;
-    font-size: 16px;
-    color: #777;
-}
-
-.hero {
+    text-align: center;
     padding: 60px 20px;
 }
 
-.hero h2 {
-    font-size: 28px;
-    margin-bottom: 15px;
+h1 {
+    font-family: 'Playfair Display', serif;
+    font-size: 48px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+}
+
+.subtitle {
+    font-size: 16px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #b76e79;
+}
+
+.hero {
+    text-align: center;
+    padding: 40px 20px 80px;
 }
 
 .hero p {
-    max-width: 500px;
-    margin: auto;
-    color: #555;
+    font-size: 18px;
+    margin-bottom: 30px;
 }
 
-.button {
+.btn {
     display: inline-block;
-    margin-top: 25px;
-    padding: 12px 25px;
-    background: #e91e63;
-    color: white;
+    padding: 12px 30px;
+    background-color: #e8cfd4;
+    color: #000;
     text-decoration: none;
-    border-radius: 30px;
+    font-weight: 500;
+    letter-spacing: 1px;
     transition: 0.3s;
 }
 
-.button:hover {
-    background: #d81b60;
-}
-
-.image-placeholder {
-    margin-top: 40px;
-    height: 250px;
-    background: #ffe4ec;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #999;
-    font-size: 14px;
+.btn:hover {
+    background-color: #d9b6bd;
 }
 
 footer {
-    margin-top: 60px;
+    text-align: center;
     padding: 20px;
-    font-size: 14px;
+    font-size: 13px;
     color: #888;
 }
 </style>
@@ -86,22 +72,17 @@ footer {
 <body>
 
 <header>
-    <h1>Glam Closet 💗</h1>
-    <div class="tagline">แฟชั่นเรียบหรู สไตล์มินิมอล</div>
+    <h1>Pebbles Glam Closet</h1>
+    <div class="subtitle">Elegant • Minimal • Feminine</div>
 </header>
 
 <section class="hero">
-    <h2>เสื้อผ้าคัดพิเศษ ใส่แล้วดูแพง</h2>
-    <p>คอลเลกชันที่ออกแบบมาเพื่อผู้หญิงที่รักความเรียบง่าย แต่โดดเด่นทุกมุมมอง</p>
-    <a href="#" class="button">Shop Now</a>
-
-    <div class="image-placeholder">
-        พื้นที่สำหรับใส่รูปสินค้า (เดี๋ยวเปลี่ยนตอนดึก 😉)
-    </div>
+    <p>เสื้อผ้าผู้หญิงโทนชมพูขาว เรียบหรู ดูแพง</p>
+    <a href="#" class="btn">SHOP NOW</a>
 </section>
 
 <footer>
-    © 2026 Glam Closet. All rights reserved.
+    © 2026 Pebbles Glam Closet. All rights reserved.
 </footer>
 
 </body>
