--- a/index.html
+++ b/index.html
@@ -4,211 +4,77 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pebbles Glam Closet</title>
-
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500&display=swap" rel="stylesheet">
-
 <style>
-body{
-    margin:0;
-    font-family:'Lato',sans-serif;
-    background:#fffafb;
-    color:#333;
+body {
+    font-family: 'Lato', sans-serif;
+    background: #fffafb;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
 }
 
-nav{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding:20px 8%;
-    background:white;
-    position:sticky;
-    top:0;
+h1 {
+    color: #d88ca1;
+    margin-bottom: 15px;
 }
 
-.logo{
-    font-family:'Playfair Display',serif;
-    font-size:22px;
+.product {
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.07);
+    padding: 18px;
+    margin: 20px auto;
+    max-width: 380px;
 }
 
-.cart{
-    cursor:pointer;
-    font-size:14px;
+.product img {
+    width: 100%;
+    border-radius: 8px;
 }
 
-header{
-    text-align:center;
-    padding:80px 20px;
+.price-day {
+    text-align: left;
+    margin-top: 10px;
+    font-size: 14px;
 }
 
-h1{
-    font-family:'Playfair Display',serif;
-    font-size:48px;
-    margin:0;
-}
-
-.tagline{
-    letter-spacing:3px;
-    color:#c48a95;
-    margin-top:15px;
-    font-size:13px;
-}
-
-.button{
-    display:inline-block;
-    margin-top:30px;
-    padding:12px 30px;
-    background:#e6c3c8;
-    text-decoration:none;
-    color:black;
-    font-size:13px;
-    letter-spacing:2px;
-}
-
-.section{
-    padding:70px 10%;
-    text-align:center;
-}
-
-.section h2{
-    font-family:'Playfair Display',serif;
-    font-size:32px;
-}
-
-.products{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:30px;
-    margin-top:40px;
-}
-
-.card{
-    background:white;
-    padding:20px;
-}
-
-.card img{
-    width:100%;
-    height:260px;
-    object-fit:cover;
-}
-
-.price{
-    color:#c48a95;
-    margin:10px 0;
-}
-
-.add-btn{
-    padding:8px 20px;
-    border:1px solid #e6c3c8;
-    background:transparent;
-    cursor:pointer;
-}
-
-.about{
-    background:#fdf2f4;
-}
-
-footer{
-    padding:40px;
-    text-align:center;
-    font-size:13px;
-    color:#999;
-}
-
-.cart-popup{
-    position:fixed;
-    right:20px;
-    top:80px;
-    background:white;
-    padding:20px;
-    width:250px;
-    display:none;
-    box-shadow:0 5px 20px rgba(0,0,0,0.08);
+.price-day div {
+    margin: 6px 0;
 }
 </style>
 </head>
-
 <body>
 
-<nav>
-    <div class="logo">Pebbles Glam Closet</div>
-    <div class="cart" onclick="toggleCart()">
-        Cart (<span id="cart-count">0</span>)
-    </div>
-</nav>
-
-<div class="cart-popup" id="cart-box">
-    <h3>Shopping Cart</h3>
-    <div id="cart-items">ยังไม่มีสินค้า</div>
-</div>
-
-<header>
-    <h1>Pebbles Glam Closet</h1>
-    <div class="tagline">ELEGANT · MINIMAL · FEMININE</div>
-    <a href="#shop" class="button">SHOP NOW</a>
-</header>
-
-<section id="shop" class="section">
-    <h2>New Collection</h2>
-    <div class="products">
-
-        <div class="card">
-            <img src="https://via.placeholder.com/300x400">
-            <h3>Blush Satin Dress</h3>
-            <div class="price">1,290 ฿</div>
-            <button class="add-btn" onclick="addToCart('Blush Satin Dress')">Add to Cart</button>
-        </div>
-
-        <div class="card">
-            <img src="https://via.placeholder.com/300x400">
-            <h3>Soft Pink Blazer</h3>
-            <div class="price">1,590 ฿</div>
-            <button class="add-btn" onclick="addToCart('Soft Pink Blazer')">Add to Cart</button>
-        </div>
-
-        <div class="card">
-            <img src="https://via.placeholder.com/300x400">
-            <h3>Ivory Silk Top</h3>
-            <div class="price">890 ฿</div>
-            <button class="add-btn" onclick="addToCart('Ivory Silk Top')">Add to Cart</button>
-        </div>
-
-    </div>
-</section>
-
-<section class="section about">
-    <h2>About Us</h2>
-    <p>
-        Pebbles Glam Closet คือร้านเสื้อผ้าผู้หญิงสไตล์ Elegant Minimal
-        โทนชมพูขาว เรียบหรู ดูแพง สำหรับสาวยุคใหม่
-    </p>
-</section>
-
-<section class="section">
-    <h2>Contact</h2>
-    <p>Instagram: @pebblesglamcloset</p>
-    <p>Email: pebblesglam@gmail.com</p>
-</section>
-
-<footer>
-© 2026 Pebbles Glam Closet. All rights reserved.
-</footer>
+<h1>Pebbles Glam Closet</h1>
+<div id="products"></div>
 
 <script>
-let cartCount=0;
-let cartItems=[];
+// 📊 ใส่ Sheet ID ของคุณตรงนี้
+const sheetID = "1pRBf8Qr_y-UxNEA11W2n-N-puSr_nMGBVe-qg_yqs30";
 
-function addToCart(item){
-    cartCount++;
-    cartItems.push(item);
-    document.getElementById("cart-count").innerText=cartCount;
-    document.getElementById("cart-items").innerHTML=cartItems.join("<br>");
-}
+// 🔗 URL ดึงข้อมูลเป็น JSON
+const url = `https://opensheet.elk.sh/${sheetID}/Sheet1`;
 
-function toggleCart(){
-    const box=document.getElementById("cart-box");
-    box.style.display=box.style.display==="block"?"none":"block";
-}
+fetch(url)
+  .then(res => res.json())
+  .then(data => {
+    const container = document.getElementById("products");
+
+    data.forEach(item => {
+      container.innerHTML += `
+        <div class="product">
+          <img src="${item.image}" alt="${item.name}">
+          <h3>${item.name}</h3>
+          <div class="price-day">
+              ${item.day1 ? `<div>เช่า 1 วัน — ${item.day1} ฿</div>` : ''}
+              ${item.day3 ? `<div>เช่า 3 วัน — ${item.day3} ฿</div>` : ''}
+              ${item.day5 ? `<div>เช่า 5 วัน — ${item.day5} ฿</div>` : ''}
+              ${item.day7 ? `<div>เช่า 7 วัน — ${item.day7} ฿</div>` : ''}
+          </div>
+        </div>
+      `;
+    });
+  });
 </script>
 
 </body>
