--- a/index.html
+++ b/index.html
@@ -1,81 +1,54 @@
+
 <!DOCTYPE html>
 <html lang="th">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pebbles Glam Closet</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pebbles Glam Closet</title>
 
-<style>
-body {
-  font-family: 'Georgia', serif;
-  background-color: #fffafb;
-  margin: 0;
-  padding: 30px;
-  text-align: center;
-}
+  <style>
+    body {
+      font-family: 'Georgia', serif;
+      background-color: #fffafb;
+      margin: 0;
+      padding: 30px;
+      text-align: center;
+    }
 
-h1 {
-  color: #c67b8b;
-  margin-bottom: 30px;
-}
+    h1 {
+      color: #c67b8b;
+      margin-bottom: 40px;
+    }
 
-#products {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
+    .product {
+      background: white;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 400px;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
 
-.card {
-  background: white;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
-}
+    .product img {
+      width: 100%;
+      border-radius: 10px;
+    }
 
-.card img {
-  width: 100%;
-  border-radius: 10px;
-}
-
-.price {
-  margin-top: 10px;
-  font-size: 14px;
-  color: #444;
-}
-</style>
+    .price {
+      margin-top: 15px;
+      font-weight: bold;
+      color: #444;
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>Pebbles Glam Closet</h1>
+  <h1>Pebbles Glam Closet</h1>
 
-<div id="products"></div>
+  <div id="products"></div>
 
-<script>
-fetch("https://opensheet.elk.sh/1pRBf8Qr_y-UxNEA11W2n-N-puSr_nMGBVe-qg_yqs30/Sheet1")
-  .then(res => res.json())
-  .then(data => {
-    const container = document.getElementById("products");
-
-    data.forEach(item => {
-      container.innerHTML += `
-        <div class="card">
-          <img src="${item.image}" alt="${item.name}">
-          <h3>${item.name}</h3>
-          <div class="price">
-            <p>Day1: ${item.day1} บาท</p>
-            <p>Day3: ${item.day3} บาท</p>
-            <p>Day5: ${item.day5} บาท</p>
-            <p>Day7: ${item.day7} บาท</p>
-          </div>
-        </div>
-      `;
-    });
-  })
-  .catch(err => {
-    document.getElementById("products").innerHTML = "โหลดข้อมูลไม่ได้";
-  });
-</script>
+  <script src="script.js"></script>
 
 </body>
 </html>
